<resources>
    <string name="app_name">WebCapture</string>
    <string name="confirmation">Confirmation! Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="convert_webpage_to_pdf">Convert WebPage To PDF</string>
    <string name="enter_url_here">Enter URL here</string>
    <string name="email"><a href="mailto:tawhidmonowar@gmail.com">tawhidmonowar@gmail.com</a></string>
    <string name="github"><a href="https://github.com/tawhidmonowar/WebCapture">https://github.com/tawhidmonowar/WebCapture</a></string>
    <string name="about_str">WebCapture is an open source Android application that allows users to convert any web page into a PDF file. With this app, users can easily save web pages for offline reading, share web pages as PDF files, or simply keep a copy of important web pages for future reference.</string>
    <string name="enter_url_to_proceed">Enter URL to Proceed</string>
    <string name="e_g_url">E.g: https://www.example.com/blog?…</string>
    <string name="about">About</string>
    <string name="clear">Clear</string>
    <string name="go">Go</string>
    <string name="paste">Paste</string>
    <string name="bing">Bing</string>
    <string name="google">Google</string>
    <string name="duckduckgo">DuckDuckGo</string>
    <string name="app_version">1.0.3</string>
    <string name="last_update">February 2025</string>
    <string name="last_update_txt">Last Update</string>
    <string name="version_str">Version</string>
    <string name="contact_str">Contact</string>
    <string name="github_str">Github</string>
    <string name="webpage_not_available">The webpage is not available!</string>
    <string name="try_again">Try again</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="developed_by_tawhid_monowar">Developed by Tawhid Monowar</string>
    <string name="pdf_name">PDF Name</string>
    <string name="file_name">File Name</string>
    <string name="file_date">File Date</string>
    <string name="pdf_icon">pdf_icon</string>
    <string name="youtube">YouTube</string>
    <string name="enter_a_video_url_to_proceed">Enter a Video URL to Proceed:</string>
    <string name="yt_e_g_url">E.g: https://www.youtube.com/watch?…</string>
    <string name="download_thumbnail_hd">Download Thumbnail (HD)</string>
    <string name="reload">Reload</string>
    <string name="title">Title:</string>
    <string name="no_tags">No tags!</string>
    <string name="hide">Hide</string>
    <string name="hashtags">Hashtags:</string>
    <string name="no_title">No title!</string>
    <string name="no_description">No description!</string>
    <string name="description">Description:</string>
    <string name="no_hashtag">No hashtag!</string>
    <string name="video_tag_s">Video Tag(s):</string>
    <string name="copy">Copy</string>
    <string name="expand">expand</string>

</resources>